# django-rapido

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DJANGO_COMPLETE_SETUP_GUIDE.md  Dockerfile  Makefile  QUICK_START.md  README.md  VERSION_UPDATES_SUMMARY.md  django_setup_guide_2025.md  docker-compose.yml  entrypoint.sh  fancy-guide.html  index.html  nginx.conf  pyproject.toml  requirements.txt  temp.html
accounts/: admin.py  helpers.py  models.py  serializers.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
common/: README.md  admin.py  callbacks.py  decorators.py  helpers.py  mixins.py  models.py  serializers.py  unfold_admin_bases.py  views.py
common/migrations/: 0002_customuser_status.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: System Analysis.md  Thought Process v1.md  Thought Process v2.md  Thought Process v3.md
docs/flows/: Careerly 001 auth.md  Careerly 002 home page.md  Careerly 003 jobs.md  Careerly 004 notifications.md  Careerly 005 profile.md  Careerly 006 subscription.md  Careerly 007 monitoring.md  Careerly Flow.md
guides/: INDEX.md  index.html
guides/common/: Models guide.md
project/: __init__.py  asgi.py  celery.py  routing.py  urls.py
project/settings/: __init__.py  base.py  local.py  production.py  unfold_config.py
project/settings/components/: api.py  apps.py  cache.py  celery.py  channels.py  database.py  logging.py  security.py  third_party.py
